[package]
name = "abra"
version = "0.2.1"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[dependencies]
abra_core = { path = "../abra_core" }
ansi_term = "0.12.1"
clap = { git = "https://github.com/clap-rs/clap" }
dirs = "3.0.2"
glob = "0.3.0"
itertools = "0.9.0"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
