[package]
name = "abra_core"
version = "0.5.2"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[dependencies]
abra_native = { path = "../abra_native" }
downcast-rs = "1.2.0"
itertools = "0.9.0"
peekmore = "0.5.2"
strum = "0.15.0"
strum_macros = "0.15.0"
rand = "0.7.3"

[lib]
name = "abra_core"
path = "src/lib.rs"
