[package]
name = "abra-lsp"
version = "0.0.1"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[dependencies]
abra_core = { path = "../abra_core" }
tower-lsp = "0.13.3"
futures-util = "0.3.8"
tokio = { version = "0.2", features = ["rt-core", "io-std", "io-util", "macros", "net", "test-util"] }
