[package]
name = "abra_native"
version = "0.0.1"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
name = "abra_native"
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
regex = "1.4.3"
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
