[package]
name = "abra_wasm"
version = "0.1.0"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abra_core = { path = "../abra_core" }
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"

[dependencies.wasm-bindgen]
version = "0.2.42"
features = ["serde-serialize"]
