[package]
name = "abra_wasm"
version = "0.6.8"
authors = ["Ken Gorab <ken.gorab@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abra_core = { path = "../abra_core" }
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
js-sys = "0.3.25"

[dependencies.wasm-bindgen]
version = "0.2.48"
features = ["serde-serialize"]
